kyverno/policies/base/image-verification.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-images
spec:
  rules:
  - match:
      resources:
        kinds:
        - Pod
        namespaces:
        - "at[0-9]{5}"
    name: verify-signatures
    verifyImages:
    - attestors:
      - entries:
        - keyless:
            rekor:
              url: "https://rekor.sigstore.dev"
            roots: |
              -----BEGIN CERTIFICATE-----
              MIICJzCCAa2gAwIBAgIUUDqtH1JWJrTD6VkHe+/BsnDkfqQwCgYIKoZIzj0EAwMw
[...]
              -----END CERTIFICATE-----
            subject: "https://github.com/*"
            issuer: "https://token.actions.githubusercontent.com"
      imageReferences:
      - '*'
      mutateDigest: false
  validationFailureAction: Audit
