kyverno/policies/base/pod-affinity.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-pod-affinity-spot
spec:
  validationFailureAction: enforce
  rules:
    - name: prefer-spot-instances
      match:
        resources:
          kinds:
            - Pod
      mutate:
        patchStrategicMerge:
          spec:
            affinity:
              nodeAffinity:
                preferredDuringSchedulingIgnoredDuringExecution:
                  - weight: 100
                    preference:
                      matchExpressions:
                        - key: kubernetes.azure.com/scalesetpriority
                          operator: In
                          values:
                            - spot
